# VoiceKB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-MIT  README.md  SECURITY.md  justfile  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
packaging/gnome/extension/voicekb@ctyoungb.github.com/: extension.js  metadata.json  stylesheet.css
packaging/gnome/schemas/: com.github.ctyoungb.voicekb.gschema.xml
packaging/systemd/: voicekb.service
scripts/: fetch_model.sh
voicekb/: __main__.py  capture.py  config.py  doctor.py  hotkey_evdev.py  hotkey_oxpctl.py  inject.py  logging.py  sdnotify.py  transcribe.py
